Completely fix HP Bar visibility

--- a/main/style.css
+++ b/main/style.css
@@ -158,23 +158,6 @@ body {
   -webkit-appearance: none;
   margin: 0;
 }
-/* Sidebar Section Active */
-.sidebar_section button.on { 
-    background-color: rgb(70, 180, 70);
-    color: var(--sidebar-background);
-}
-.sidebar_section button.off { 
-    background-color: rgb(180, 70, 70);
-    color: var(--text-color);
-}
-.sidebar_section button.on:active{ 
-    background: var(--text-color);
-    color: var(--sidebar-background);
-}
-.sidebar_section button.off:active { 
-    background: var(--text-color);
-    color: var(--sidebar-background);
-}
 /* Map Button Container */
 .map_button_container {
     display: flex;
